name:                hledger-import-dsl
version:             0.1.0.0
synopsis:            CSV import rules for hledger in Haskell
-- description:
license:             BSD3
license-file:        LICENSE
author:              Hans-Peter Deifel
maintainer:          hpd@hpdeifel.de
copyright:           2018 Hans-Peter Deifel
category:            Finance, Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
                     
flag examples
  description:       Build examples
  default:           False

library
  hs-source-dirs:      src
  exposed-modules:     Hledger.Data.Lenses
                     , Hledger.Import
  other-modules:       Hledger.Data.Lenses.Helper
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2 && < 2.3
                     , hledger-lib >= 1.5 && <1.6
                     , microlens-platform
                     , template-haskell
                     , regex-tdfa
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

  
executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hledger-import-dsl
                     , microlens-platform
                     , hledger-lib >= 1.5 && <1.6
                     , text
                     , Decimal
  if !flag(examples)
    buildable:         False
